kubernetes/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-frontend
spec:
  type: LoadBalancer
  selector:
    app: social-frontend
  ports:
    - protocol: TCP
      port: 80 # External port (users will access this)
      targetPort: 80 # Container port inside the pod
