kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: 'gce'
    cert-manager.io/cluster-issuer: 'letsencrypt-staging'
spec:
  tls:
    - hosts:
        - social-media-app.com
        - www.social-media-app.com
      secretName: social-media-app-tls
  rules:
    - host: social-media-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-frontend
                port:
                  number: 80
    - host: www.social-media-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-frontend
                port:
                  number: 80
